// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenuLevel1 should render component when renderItem is called 1`] = `
<ForwardRef
  accessibilityLabel="Girl"
  accessibilityRole="button"
  onPress={[Function]}
>
  <ForwardRef
    alt="Image Alt text attribute value"
    height={132}
    host=""
    source={
      Object {
        "uri": "https://res.cloudinary.com/tcp-dam-test/image/upload/c_crop,g_face:center,q_auto:best,w_961/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
      }
    }
    url=""
    width={375}
  />
  <ForwardRef>
    <ForwardRef
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs22"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text="Girl"
      textAlign="center"
      textDecoration={null}
    />
    <ForwardRef
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs12"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text="Sizes 4-141"
      textAlign="center"
      textDecoration={null}
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`NavMenuLevel1 should render component when renderItem is called without nav menu image 1`] = `
<ForwardRef
  accessibilityLabel="Girl"
  accessibilityRole="button"
  onPress={[Function]}
>
  <ForwardRef
    accessibilityText=""
    color="text.primary"
    dataLocator=""
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="black"
    margin="0 60px 0 0"
    numberOfLines={1}
    text="Girl"
    textAlign="center"
    textDecoration={null}
  />
  <ForwardRef
    alt="Girl"
    height={26}
    host=""
    maxWidth={16}
    position="absolute"
    right={37}
    source={
      Object {
        "testUri": "../../../../core/src/assets/carrot-small-rights.png",
      }
    }
    url=""
  />
</ForwardRef>
`;

exports[`NavMenuLevel1 should render correctly 1`] = `undefined`;
